[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pycran"
author = "Sultan Iman"
author-email = "sultan.imanhodjaev@gmail.com"
home-page = "https://github.com/imanhodjaev/pycran"
classifiers = ["License :: OSI Approved :: Apache Software License"]
